# fast-api-boiler

./: .env  .gitignore  docker-compose.yaml  pyproject.toml  requirements.txt
alembic/: env.py
app/: main.py
app/api/: deps.py
app/api/api_v1/: api.py
app/api/api_v1/endpoints/: login.py  root.py  users.py
app/core/: config.py
app/crud/: base.py  crud_user.py
app/db/: async_session.py  base.py  base_class.py
app/models/: __init__.py  user.py
app/schemas/: error.py  response.py  token.py  user.py
